--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -133,7 +133,8 @@
     grid-template-columns: 50% 50%;
     column-gap: 15px;
     row-gap: 15px;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
+    overflow: fixed;
 }
 
 .section.dual > .column {
