Update index/venue/committees.html and Create registration.html

--- a/docs/styles/committees.css
+++ b/docs/styles/committees.css
@@ -62,6 +62,10 @@ h1.continuous {
         margin-left: 0px;
         margin-right: 0px;
     }
+
+    .member .affiliation {
+        font-size: 0.9em;
+    }
 }
 
 .member {
@@ -70,6 +74,7 @@ h1.continuous {
 
 .member .picture {
     height: 100%;
+    width: 100%;
 }
 
 .member .detail {
