--- a/docs/styles/venue.css
+++ b/docs/styles/venue.css
@@ -13,3 +13,17 @@
     width: 100%;
     height: 80vh;
 }
+
+#venue .card-title {
+    font-weight: bold;
+}
+
+#venue .card-img-top {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+}
+
+#venue .card-footer {
+    text-align: right;
+}
