--- a/docs/styles/venue.css
+++ b/docs/styles/venue.css
@@ -20,10 +20,16 @@
 
 #venue .card-img-top {
     width: 100%;
-    height: 15vw;
+    max-height: 15vw;
+    min-height: 200px;
+    height: 100%;
     object-fit: cover;
 }
 
-#venue .card-footer {
-    text-align: right;
+#venue .col-left {
+    text-align: left;
+}
+
+#venue .col-right {
+    text-align: right !important;
 }
