--- a/docs/styles/committees.css
+++ b/docs/styles/committees.css
@@ -7,7 +7,7 @@
 .committees-program {
     width: 100%;
     height: 90vh;
-    background-image: url(../images/committees/kenrokuen.jpg);
+    background-image: url(../images/committees/kenrokuen.webp);
     background-size: cover;
     background-position: center;
 }
