--- a/docs/styles/about.css
+++ b/docs/styles/about.css
@@ -6,6 +6,14 @@
     background-position: center;
 }
 
+.sponsorship {
+    width: 100%;
+    height: 90vh;
+    background-image: url(../images/sponsorship/kenrokuen.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
 #about {
     position: relative;
     margin-top: -150px;
