--- a/docs/styles/about.css
+++ b/docs/styles/about.css
@@ -14,6 +14,14 @@
     background-position: center;
 }
 
+.proceedings {
+    width: 100%;
+    height: 90vh;
+    background-image: url(../images/proceedings/proceedings.png);
+    background-size: cover;
+    background-position: center;
+}
+
 #about {
     position: relative;
     margin-top: -150px;
